Header Small Screen Overflow CSS Fix

--- a/src/features/ui/components/header/index.module.css
+++ b/src/features/ui/components/header/index.module.css
@@ -10,8 +10,11 @@
 }
 
 .headerWrap {
+  --bar-width: 0.25rem;
   display: grid;
   grid-template-columns: 1fr auto;
+  max-height: 100vh;
+  overflow-y: auto;
   padding-block: 0;
 }
 
